--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
       <span id="maior-valor">100</span>
     </h3>
     <div id="chute" class="mensagem">
-      <div>Você disse:</div>
+      <!-- <div>Você disse:</div>
       <span class="box">20</span>
       <div>
-        O número secreto é maior <i class="fa-solid fa-arrows-up-to-line"></i>
-      </div>
+        O número secreto é maior <i class="fa-solid fa-arrows-up-to-line"></i> 
+      </div>-->
     </div>
+    <script src="app/sortear-numero.js"></script>
+    <script src="app/reconhecimento-de-voz.js"></script>
+    <script src="app/validacao.js"></script>
   </body>
 </html>
